Move search radius control on the map

--- a/assets/style.css
+++ b/assets/style.css
@@ -51,3 +51,9 @@
 #msg {
   color: red;
 }
+
+.mapControl {
+  background-color: white;
+  padding: 5px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+}
