--- a/assets/style.css
+++ b/assets/style.css
@@ -53,6 +53,9 @@
 }
 
 .mapControl {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: white;
   padding: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
