--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,11 @@
 /*                                  Flexbox                                  */
 /*                                                                           */
 /*****************************************************************************/
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .container {
   display: flex;
   flex-direction: row;
