--- a/assets/style.css
+++ b/assets/style.css
@@ -65,3 +65,36 @@ body {
   padding: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
+
+.ontop {
+  visibility: hidden;
+  position: absolute;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.blured {
+  filter: blur(2px);
+}
+
+#progress {
+  width: 100%;
+  height: 2em;
+}
+
+#progressBar {
+  background-color: white;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+}
