--- a/assets/style.css
+++ b/assets/style.css
@@ -36,21 +36,29 @@ body {
   flex-direction: row;
 }
 
-#params {
-  width: 20%;
-  margin-right: 10px;
+#usage {
+  visibility: hidden;
+  width: 33vh;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+
+}
+
+#help {
+  font: bold 22px 'Lucida Console', Monaco, monospace;
+  text-indent: 1px;
 }
 
 #map { 
-  width: 80%; 
+  width: 100vw; 
   height: 100vh; 
 }
 
 #rayon {
-  width: 100%;
+  width: 30em;
 }
 
 #msg {
